# strophe

./: README.md  TEST.sh  pyproject.toml  repomix-output.xml
scripts/: release.bb
src/evaleval/: __init__.py  adt.py  hiccup.py  js_ir.py  patch.py  signing.py  sse.py  store.py
src/poem/: sse.py
test/: integration.clj
tests/: test_patch.py  test_sse.py  test_store.py
