[project]
name = "strophe"
version = "0.2.1"
description = "Signed snippets, hiccup, and a dual-eval loop. The web that should have been."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Tommy Morris"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/tommy-mor/strophe"
Repository = "https://github.com/tommy-mor/strophe"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/poem", "src/strophe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
