[project]
name = "evaleval"
version = "0.2.4"
description = "Signed snippets, hiccup, and a dual-eval loop. The web that should have been."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Tommy Morriss"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/tommy-mor/evaleval"
Repository = "https://github.com/tommy-mor/evaleval"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evaleval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
